src/test/ui/issues/issue-45562.stderr
error: const items should never be #[no_mangle]
  --> $DIR/issue-45562.rs:3:14
   |
LL | #[no_mangle] pub const RAH: usize = 5;
   |              ---------^^^^^^^^^^^^^^^^
   |              |
   |              help: try a static value: `pub static`
   |
   = note: #[deny(no_mangle_const_items)] on by default

error: aborting due to previous error

